tests/build/cases/widget/invalid_properties_item.stderr
error: expected `when`, `child`, `remove` or a property declaration
 --> cases/widget/invalid_properties_item.rs:6:9
  |
6 |         {}
  |         ^
